glx/testdata/invalid/invalid-relationship-participants/persons/person-father.glx
persons:
  person-father:
    properties:
      name:
        value: "Robert Thompson"
        fields:
          given: "Robert"
          surname: "Thompson"
      sex: male
